--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     },
     "scripts": {
         "start": "set PORT=8000 && react-scripts start",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject",
-        "rename": "renamer --find App-clear.js --replace App.js ./src/App-clear.js && renamer --find style.css --replace index.css ./src/style.css ",
-        "remove-demo": "rimraf ./src/assets ./src/components ./src/pages ./src/Routes.js ./src/App.js ./src/index.css && npm run rename"
+        "eject": "react-scripts eject"
     },
     "devDependencies": {
         "gh-pages": "^3.1.0",
@@ -33,5 +33,6 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ]
+    ],
+    "homepage": "http://sgukz.github.io/"
 }
