--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
         "not ie <= 11",
         "not op_mini all"
     ],
-    "homepage": "http://sgukz.github.io/reh-1meeting-app/home"
+    "homepage": "http://sgukz.github.io/reh-1meeting-app/"
 }
