--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "sweetalert2": "^10.13.0"
     },
     "scripts": {
-        "start": "set PORT=8000 && react-scripts start",
+        "start": "react-scripts start",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
         "build": "react-scripts build",
